--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
         </nav>
     </header>
     <section class="promo">
-        <img src="img/illustration.png" alt="illustration" class="promo__images">
+        <img src="icons/main_ill.png" alt="illustration" class="promo__images">
         <div class="container">
             <div class="row">
                 <div class="promo__main col-lg-12">
