--- a/src/index.html
+++ b/src/index.html
@@ -348,8 +348,10 @@
             <div class="row">
                 <div class="col-lg-12 w-100">
                     <div id="slides">
-                        <div class="arrows arrow-left prev__btn" onclick="minusSlide()"></div> 
-                        <div class="arrows arrow-right next__btn" onclick="plusSlide()"></div>
+                        <div class="arrows arrow-left prev__btn"></div> 
+                        <div class="arrows arrow-right next__btn"></div>
+                        <!-- <div class="arrows arrow-left prev__btn" onclick="minusSlide()"></div> 
+                        <div class="arrows arrow-right next__btn" onclick="plusSlide()"></div> -->
                         <div class="slide">
                             <img src="img/slide1.png" alt="slide">
                             <div class="slide__main">
@@ -385,9 +387,12 @@
                         </div>
                     </div>
                     <div class="slider__line">
-                        <div class="slider__line_item" onclick="currentSlide(1)"></div> 
+                        <div class="slider__line_item slider__line_item-active"></div> 
+                        <div class="slider__line_item"></div> 
+                        <div class="slider__line_item"></div> 
+                        <!-- <div class="slider__line_item" onclick="currentSlide(1)"></div> 
                         <div class="slider__line_item" onclick="currentSlide(2)"></div> 
-                        <div class="slider__line_item" onclick="currentSlide(3)"></div> 
+                        <div class="slider__line_item" onclick="currentSlide(3)"></div> --> 
                     </div>
                 </div>
             </div>
