--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,14 @@
                         <input id="menu__toggle" type="checkbox" />
                         <label class="menu__btn" for="menu__toggle">
                             <span></span>
-                        </label>  <ul class="menu__box">
+                        </label>  
+                        <ul class="menu__box">
                             <li><a class="menu__item" href="#">Home</a></li>
-                            <li><a class="menu__item" href="#">Categories</a></li>
-                            <li><a class="menu__item" href="#">Design</a></li>
-                            <li><a class="menu__item" href="#">Layot</a></li>
-                            <li><a class="menu__item" href="#">Development</a></li>
-                            <li><a class="menu__item" href="#">My Collections</a></li>
+                            <li><a class="menu__item" href="#require">Categories</a></li>
+                            <li><a class="menu__item" href="#tools">Design</a></li>
+                            <li><a class="menu__item" href="#tools">Layot</a></li>
+                            <li><a class="menu__item" href="#tools">Development</a></li>
+                            <li><a class="menu__item" href="#newcomer">My Collections</a></li>
                             <li><a class="menu__item" href="#">Blog</a></li>
                         </ul>
                     </div>
